examples/test/testpolicy11750.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11750
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key15: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value30
          key26: value46
      podSelector:
        matchLabels:
          key35: value27
          key24: value14
          key34: value33
